--- a/views/login.html
+++ b/views/login.html
@@ -6,7 +6,7 @@
 
 <div id="languages">
   <a href="index.php?lang=es"><img src="images/es.png" /></a>
-  <a href="index.php?lang=en"><img src="images/en.png" /></a>
+  <a href="index.php?lang=en"><img src="images/usa.png" /></a>
 </div>
 {% endblock %}
 
