Se cambio el logo por uno blanco y negro

--- a/views/default_layout.html
+++ b/views/default_layout.html
@@ -33,7 +33,7 @@
   
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="navbar-header">
-        <a href="#"><img src="images/pm.png"/></a>
+        <a href="#"><img src="images/pmblack.png"/></a>
         {% block menuresponsivo %}{% endblock %}
       </div>
 
